--- a/web/src/app.css
+++ b/web/src/app.css
@@ -1,5 +1,5 @@
 .active > div {
-    @apply text-primary bg-gray-100 fill-primary;
+    @apply text-primary bg-neutral-100 border border-neutral-200 fill-primary;
 }
 
 .active > div > svg {
@@ -7,7 +7,7 @@
 }
 
 .nav-link > div {
-    @apply p-2 hover:bg-gray-200 group-hover:text-primary fill-secondary rounded-lg;
+    @apply p-2 hover:bg-neutral-200 group-hover:text-primary fill-secondary rounded-lg ;
 }
 
 
